# ClingParser

./: .gitignore  CMakeLists.txt  ClingParser.kdev4  README.md
include/: MetaASTConsumer.h  MetaFrontendAction.h  MetaVisitor.h
lib/: MetaASTConsumer.cpp  MetaVisitor.cpp  main.cpp
